@@ -12,6 +12,7 @@ plugins {
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'com.avast.gradle.docker-compose' version '0.17.6'
+	id 'jacoco'
 }
 
 group = 'by.koronatech'
@@ -46,10 +47,39 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:5.12.0'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+jacoco {
+	toolVersion = "0.8.11"
+}
+
+test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required = true
+		html.required = true
+		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+	}
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					'by/koronatech/office/api/controller/**',
+					'by/koronatech/office/api/dto/**',
+					'by/koronatech/office/OfficeApplication.class'
+			])
+		}))
+	}
+	executionData.setFrom(fileTree(buildDir).include('jacoco/test.exec'))
 }
 
 jar {
